--- a/src/main/html/index.css
+++ b/src/main/html/index.css
@@ -1,9 +1,22 @@
 body {
     margin: 0;
     padding: 0;
-
+    background-color: #1360b9;
 }
 
 header {
-    
+    box-sizing: border-box;
+    background-color: #000000;
+    color: #ffffff;
+    width: 100%;
+    height: 60px;
+    border-bottom: 7px solid #1a1919;
+}
+
+header span {
+    display: block;
+    padding-top: 18px;
+    padding-left: 20px;
+    font-style: "Montserrat", sans-serif;
+    font-weight: bold;
 }
